--- a/App/Frontend/package.json
+++ b/App/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@minimal-kit/frontend",
+  "name": "@minimal-kit/vite-ts",
   "author": "Minimals",
   "version": "7.5.0",
   "description": "Vite & TypeScript",
@@ -39,19 +39,99 @@
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/nunito-sans": "^5.2.7",
     "@fontsource-variable/public-sans": "^5.2.7",
-    "axios": "^1.7.0",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "@fontsource/barlow": "^5.2.8",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "@fullcalendar/timeline": "^6.1.19",
+    "@hookform/resolvers": "^5.2.2",
+    "@iconify/react": "^6.0.2",
+    "@mui/lab": "^7.0.0-beta.17",
+    "@mui/material": "^7.3.2",
+    "@mui/stylis-plugin-rtl": "^7.3.2",
+    "@mui/x-data-grid": "^8.12.1",
+    "@mui/x-date-pickers": "^8.12.0",
+    "@mui/x-tree-view": "^8.12.0",
+    "@react-pdf/renderer": "^4.3.1",
+    "@supabase/supabase-js": "^2.58.0",
+    "@tiptap/extension-bubble-menu": "^3.6.2",
+    "@tiptap/extension-code-block-lowlight": "^3.6.2",
+    "@tiptap/extension-image": "^3.6.2",
+    "@tiptap/extension-text-align": "^3.6.2",
+    "@tiptap/extensions": "^3.6.2",
+    "@tiptap/pm": "^3.6.2",
+    "@tiptap/react": "^3.6.2",
+    "@tiptap/starter-kit": "^3.6.2",
+    "apexcharts": "^5.3.5",
+    "autosuggest-highlight": "^3.3.4",
+    "aws-amplify": "^6.15.6",
+    "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-auto-height": "^8.6.0",
+    "embla-carousel-auto-scroll": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-fade": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "es-toolkit": "^1.39.10",
+    "firebase": "^12.3.0",
+    "framer-motion": "^12.23.22",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-resources-to-backend": "^1.2.1",
+    "lowlight": "^3.3.0",
+    "maplibre-gl": "^5.7.3",
+    "minimal-shared": "^1.1.0",
+    "mui-one-time-password-input": "^5.0.0",
+    "nprogress": "^0.2.0",
+    "react": "^19.1.1",
+    "react-apexcharts": "^1.7.0",
+    "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.63.0",
+    "react-i18next": "^16.0.0",
+    "react-map-gl": "^8.0.4",
+    "react-markdown": "^10.1.0",
+    "react-organizational-chart": "^2.2.1",
+    "react-phone-number-input": "^3.4.12",
+    "react-router": "^7.9.3",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "simplebar-react": "^3.3.2",
+    "sonner": "^2.0.7",
+    "stylis": "^4.3.6",
+    "swr": "^2.3.6",
+    "turndown": "^7.2.1",
+    "yet-another-react-lightbox": "^3.25.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.2.0",
-    "vite": "^5.0.0",
-    "eslint": "^8.50.0",
-    "prettier": "^3.0.0"
+    "@eslint/js": "^9.36.0",
+    "@types/autosuggest-highlight": "^3.2.3",
+    "@types/node": "^24.5.2",
+    "@types/nprogress": "^0.2.3",
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
+    "@types/stylis": "^4.2.7",
+    "@types/turndown": "^5.0.5",
+    "@typescript-eslint/parser": "^8.44.1",
+    "@vitejs/plugin-react-swc": "^4.1.0",
+    "eslint": "^9.36.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-perfectionist": "^4.15.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-unused-imports": "^4.2.0",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.1",
+    "vite": "^7.1.7",
+    "vite-plugin-checker": "^0.11.0"
   }
 }
