--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.63.0",
     "react-i18next": "^16.0.0",
     "react-map-gl": "^8.0.4",
